# comfyui-cvt

./: LICENSE  README.md  __init__.py  extract_first_frame.py  image_concat_multi.py  install.bat  install_macos.command  list_to_batch.py  presets.py  pyproject.toml  requirements.txt  scene_camera.py  show_text.py  simple_gate.py  storyboard_assembler.py  threeshot.py  threeshot_simple.py  vision_analyzer.py
example_workflows/: 1_T2IProdDesign.json  1_T2IProdDesign_v3.json  2_Image2Control.json  3_Threeshot_Sequence.json  3_Threeshot_Sequence_v3.json  4_Combo.json  I2StoryboardSora.json  Video_RestyleReRender_Sora.json
js/: threeshot_widgets.js
